# gc

./: .gitignore  Dockerfile  README.md  compose.yml  flake.nix  pyproject.toml
src/: Impl.md
src/collector/: database.py  main.py  model.py  routes.py  service.py  settings.py  util.py
src/common/: model.py
src/producer/: main.py  routes.py  schema.py  service.py  settings.py  util.py
src/registry/: main.py  routes.py  service.py  state.py
tests/: suites.py  test_collector.py  test_producer.py  test_registry.py
